caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/provides_extendable.caffeine
_base (Provides): { vendor: String }

Blueprints
  "test" success_rate(x):
    Requiring { env: String }
    signals { value: "x" }
